Projet_GL/src/test/deca/syntax/invalid/unprovided/big_int.deca
// Test très gros entier

{
    int grosInt = 325246353452;
}
